# rusttorch

./: .gitignore  BUILDING.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FILE_STRUCTURE.md  FIXES_APPLIED.md  GPU_KERNELS.md  HOW_TO_PUSH.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  ISSUES.md  MIGRATION_SUMMARY.md  PERFORMANCE.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_COMPLETION.md  PROJECT_COMPLETE.md  PUSH_TO_GITHUB.md  PYTORCH_PORT.md  QUICK_START.md  README.md  RUSTTORCH_CODE_REVIEW_PLAN.md  RUSTTORCH_PLAN.md  RUSTTORCH_TODO.md  STATUS_UPDATE.md  SUMMARY.md  WORK_COMPLETED.md  run_benchmarks.sh  setup.py
.claude/: plan.md
.github/ISSUE_TEMPLATE/: feature_request.md
benchmarks/: README.md  compare_pytorch.py
rusttorch-core/: Cargo.toml
rusttorch-core/benches/: tensor_ops.rs
rusttorch-core/examples/: bench_conv2d.rs  cifar10.rs  gpt2.rs  gpt2_bench.rs  gpt_char.rs  mnist.rs
rusttorch-core/src/: error.rs  lib.rs
rusttorch-core/src/autograd/: graph.rs  mod.rs  ops.rs  tests.rs  variable.rs
rusttorch-core/src/backend/: mod.rs  ndarray_backend.rs
rusttorch-core/src/data/: cifar10.rs  idx.rs  mnist.rs  mod.rs  tokenizer.rs  transforms.rs
rusttorch-core/src/ffi/: mod.rs  ops.rs  tensor.rs
rusttorch-core/src/memory/: mod.rs
rusttorch-core/src/nn/: activation.rs  attention.rs  batchnorm.rs  conv2d.rs  dropout.rs  embedding.rs  flatten.rs  gpt2.rs  groupnorm.rs  layernorm.rs  linear.rs  loss.rs  mod.rs  module.rs  optim.rs  parameter.rs  pool.rs  residual.rs  resnet.rs  rmsnorm.rs  safetensors.rs  sequential.rs  state_dict.rs  tests.rs  transformer.rs
rusttorch-core/src/ops/: activation.rs  broadcast.rs  elementwise.rs  loss.rs  matrix.rs  mod.rs  optimizer.rs  reduction.rs  simd.rs
rusttorch-core/src/tensor/: device.rs  dtype.rs  mod.rs  shape.rs  storage.rs  view.rs
rusttorch-core/src/utils/: mod.rs
rusttorch-core/tests/: autograd_gradcheck.rs  end_to_end_training.rs
rusttorch-py/: Cargo.toml  pyproject.toml
rusttorch-py/python/rusttorch/: __init__.py
rusttorch-py/python/tests/: test_autograd_smoke.py
rusttorch-py/src/: lib.rs
