[workspace]
members = ["rusttorch-core", "rusttorch-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustTorch Contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/pytorch/pytorch"
homepage = "https://pytorch.org"

[workspace.dependencies]
# Core dependencies
ndarray = "0.15"
num-traits = "0.2"
rayon = "1.8"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Development dependencies
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
