[package]
name = "rusttorch-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "rusttorch_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
ndarray.workspace = true
num-traits.workspace = true
rayon.workspace = true
rand.workspace = true
num_cpus = "1.16"
ureq = { version = "2", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[features]
default = []
ffi = []  # Enable C FFI exports for PyTorch integration
datasets = ["ureq", "flate2", "tar"]  # Download and load standard datasets (MNIST, CIFAR-10, etc.)

[[bench]]
name = "tensor_ops"
harness = false
