[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rusttorch"
version = "0.1.0"
description = "High-performance PyTorch operations in Rust"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = ["pytorch", "tensor", "deep-learning", "rust"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://pytorch.org"
Repository = "https://github.com/pytorch/pytorch"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rusttorch"
python-source = "python"
