[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rusttorch"
version = "0.1.0"
description = "High-performance PyTorch extension with Rust-accelerated operations"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = ["pytorch", "tensor", "deep-learning", "rust", "performance", "extension"]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yourusername/rusttorch"
Repository = "https://github.com/yourusername/rusttorch"
Documentation = "https://github.com/yourusername/rusttorch#readme"
Issues = "https://github.com/yourusername/rusttorch/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rusttorch"
python-source = "python"
